@@ -40,7 +40,7 @@ Q_OBJECT
 
     KAction *quit_action,        *remove_vg_action,       *rename_vg_action, 
             *reduce_vg_action,   *rescan_action,          *create_vg_action,
-	    *rescan_vg_action,   *vgchange_alloc_action,  *vgchange_pv_action, 
+	    *vgchange_alloc_action,  *vgchange_pv_action, 
 	    *vgchange_lv_action, *vgchange_resize_action, *vgchange_available_action, 
 	    *vgchange_extent_action, *remove_missing_action, *config_kvpm_action;
 
@@ -62,7 +62,6 @@ Q_OBJECT
     
  public slots:
     void reRun();
-    void rebuildVolumeGroupTab();
  
  private slots:
     void setupMenus(int index);
